app/src/main/java/com/gdavidpb/test/domain/usecase/errors/LookupTracksError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class LookupTracksError {
    class NoConnection(val isNetworkAvailable: Boolean) : LookupTracksError()
}